Lagt til passende farge til hvert pokemonCard

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -95,24 +95,24 @@
 
       let allPokemonTypes = [];
       const typeColors = {
-        normal: `#001122`,
-        fighting: `#001122`,
-        flying: `#001122`,
-        poison: `#001122`,
-        ground: `#001122`,
-        rock: `#001122`,
-        bug: `#001122`,
-        ghost: `#001122`,
-        steel: `#001122`,
-        fire: `#001122`,
-        water: `#001122`,
-        grass: `#001122`,
-        electric: `#001122`,
-        psycich: `#001122`,
-        ice: `#001122`,
-        drago: `#001122`,
-        dark: `#001122`,
-        fairy: `#001122`,
+        normal: `#E4BFC9`,
+        fighting: `#EF9E87`,
+        flying: `#91AFC3`,
+        poison: `#8C76A2`,
+        ground: `#DDBD95`,
+        rock: `#7D5047`,
+        bug: `#7DAB89`,
+        ghost: `#B897B8`,
+        steel: `#97DFC7`,
+        fire: `#FA8791`,
+        water: `#7F9FE8`,
+        grass: `#93BBA0`,
+        electric: `#F8F8B4`,
+        psycich: `#E88CBE`,
+        ice: `#E7F5FD`,
+        dragon: `#A5CDD4`,
+        dark: `#A2A2A3`,
+        fairy: `#EBACC5`,
       };
 
       async function fetchPokemonTypes() {
