Lagt til placeholder og buttons for å generere ny pokemon

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -7,8 +7,17 @@
   </head>
   <body>
     <h1>Pokemonoversikt</h1>
+
     <button id="clear-filter">Fjern filter</button>
     <div id="filter-buttons"></div>
+
+    <input
+      type="text"
+      placeholder="Skriv inn navn på din nye Pokémon"
+      id="new-pokemon-name"
+    />
+    <input type="text" placeholder="Skriv inn Pokémonens' nye type" />
+    <input type="button" value="Lag ny Pokémon!" id="create-btn" />
     <div id="show-all-pokemon"></div>
     <div id="pokemon-container"></div>
     <div id="saved-pokemon-card"></div>
