Div til å legge ny pokemon inni

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -18,6 +18,7 @@
     />
     <input type="text" placeholder="Skriv inn Pokémonens' nye type" />
     <input type="button" value="Lag ny Pokémon!" id="create-btn" />
+    <div id="create-pokemon"></div>
     <div id="show-all-pokemon"></div>
     <div id="pokemon-container"></div>
     <div id="saved-pokemon-card"></div>
