--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -80,8 +80,8 @@
           //pokemonData.name brukes for å få opp navnet, types for å få typen. Bruke array 0 for å få første typen, ikke alle.
           const pokemonCard = document.createElement("div");
           pokemonCard.innerHTML = `
-                          <p>Navn: ${pokemon.name}</p>
-                          <p>Type: ${pokemon.types[0].type.name}</p>`;
+                                <p>Navn: ${pokemon.name}</p>
+                                <p>Type: ${pokemon.types[0].type.name}</p>`;
 
           pokemonCard.style.backgroundColor = pokemonColor;
 
@@ -115,6 +115,11 @@
 
           const createBtn = document.querySelector("#create-btn");
           createBtn.addEventListener("click", createPokemon);
+          allPokemons.push({
+            name: "createPokemonName",
+            type: "createPokemonType",
+            /*img*/
+          });
 
           pokemonCard.appendChild(saveBtn);
           pokemonCard.appendChild(deleteBtn);
@@ -282,12 +287,14 @@
             "#create-pokemon-type"
           ).value;
           console.log(allPokemons);
+
           allPokemons.unshift({
             name: createPokemonName,
-            type: createPokemonType,
+            types: [{ type: { name: createPokemonType } }],
           });
-        }
 
+          displayPokemons(allPokemons);
+        }
         fetchPokemon();
         loadSavedPokemons();
       });
