--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -36,6 +36,16 @@
         );
         let allPokemons = []; //Array til å lagre fetchet pokemons!! viktig
         let savedPokemons = [];
+        const randomPokemonImg = [
+          "https://img.pokemondb.net/sprites/scarlet-violet/normal/sunflora.png",
+          "https://img.pokemondb.net/sprites/scarlet-violet/normal/forretress.png",
+          "https://img.pokemondb.net/sprites/scarlet-violet/normal/heracross.png",
+          "https://img.pokemondb.net/sprites/scarlet-violet/normal/granbull.png",
+          "https://img.pokemondb.net/sprites/ultra-sun-ultra-moon/normal/mantine.png",
+          "https://img.pokemondb.net/sprites/scarlet-violet/normal/swinub.png",
+          "https://img.pokemondb.net/sprites/scarlet-violet/normal/gengar.png",
+          "https://img.pokemondb.net/sprites/scarlet-violet/normal/dewgong.png",
+        ];
 
         //Fetcher APIet's pokemon (etter anvist i dokumentasjonen)
         async function fetchPokemon() {
