sletter const randomPokemonImg, bruker id istedet

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -36,16 +36,6 @@
         );
         let allPokemons = []; //Array til å lagre fetchet pokemons!! viktig
         let savedPokemons = [];
-        const randomPokemonImg = [
-          "https://img.pokemondb.net/sprites/scarlet-violet/normal/sunflora.png",
-          "https://img.pokemondb.net/sprites/scarlet-violet/normal/forretress.png",
-          "https://img.pokemondb.net/sprites/scarlet-violet/normal/heracross.png",
-          "https://img.pokemondb.net/sprites/scarlet-violet/normal/granbull.png",
-          "https://img.pokemondb.net/sprites/ultra-sun-ultra-moon/normal/mantine.png",
-          "https://img.pokemondb.net/sprites/scarlet-violet/normal/swinub.png",
-          "https://img.pokemondb.net/sprites/scarlet-violet/normal/gengar.png",
-          "https://img.pokemondb.net/sprites/scarlet-violet/normal/dewgong.png",
-        ];
 
         //Fetcher APIet's pokemon (etter anvist i dokumentasjonen)
         async function fetchPokemon() {
@@ -128,7 +118,7 @@
           allPokemons.push({
             name: "createPokemonName",
             type: "createPokemonType",
-            /*img*/
+            img: getRandomImg(),
           });
 
           pokemonCard.appendChild(saveBtn);
@@ -296,14 +286,21 @@
           const createPokemonType = document.querySelector(
             "#create-pokemon-type"
           ).value;
-          console.log(allPokemons);
 
           allPokemons.unshift({
             name: createPokemonName,
             types: [{ type: { name: createPokemonType } }],
+            img: getRandomImg(),
           });
 
           displayPokemons(allPokemons);
+        }
+
+        function getRandomImg() {
+          const randomIndex = Math.floor(
+            Math.random() * randomPokemonImg.length
+          );
+          return randomPokemonImg[randomIndex];
         }
         fetchPokemon();
         loadSavedPokemons();
