Opprettet div til enemy i HTML

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -5,5 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <div class="enemy-health-container">
+        <div class="healthbar-container">
+          <div class="healthbar enemy-health"></div>
+          <div class="text-container">
+            <p id="enemy-name-txt">Fiendens navn</p>
+            <p id="enemy-healt-txt">`${}`</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script></script>
+  </body>
 </html>
