Lagt til min pokemon-div og bildecontainer

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="main-container">
+      <!--FIENDE-->
       <div class="enemy-health-container">
         <div class="healthbar-container">
           <div class="healthbar enemy-health"></div>
@@ -16,6 +17,24 @@
           </div>
         </div>
       </div>
+
+      <!--MIN POKEMON-->
+      <div class="my-pokemon-health-container">
+        <div class="healthbar-container">
+          <div class="healthbar my-pokemon-health"></div>
+          <div class="text-container">
+            <p id="my-pokemon-name"></p>
+            <p id="my-pokemon-health-txt">`${}`</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bildenontainere fienden -->
+      <div class="enemy-container">
+        <div class="img-container enemy"></div>
+      </div>
+      <!-- Bildecontainer for min pokemon-->
+      <div class="img-container my-pokemon"></div>
     </div>
     <script></script>
   </body>
