--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -53,13 +53,27 @@
             randomPokemon.push(randomPokemonData);
           }
 
+          return randomPokemon;
+
           console.log("fetchRandomPokemon:", randomPokemon);
         } catch {
           console.error("Feil ved innlastning av Random Pokemon!");
         }
       }
 
-      fetchRandomPokemon();
+      async function addPokemonName() {
+        try {
+          const randomPokemon = await fetchRandomPokemon();
+          document.getElementById("enemy-name-txt").innerHTML =
+            randomPokemon[0].name;
+        } catch {
+          console.error("Feil ved oppdatering av navn på Pokemon");
+        }
+      }
+      addPokemonName();
+
+      const enemy = fetchRandomPokemon(3);
+      const myPokemon = fetchRandomPokemon(4);
     </script>
   </body>
 </html>
