Endret navn på addPokemonName til å inkludere type

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -73,7 +73,7 @@
         }
       }
 
-      async function addPokemonName() {
+      async function addPokemonNameType() {
         try {
           const randomPokemon = await fetchRandomPokemon();
 
@@ -96,7 +96,7 @@
           console.error("Feil ved oppdatering av navn på Pokemon"), error;
         }
       }
-      addPokemonName();
+      addPokemonNameType();
     </script>
   </body>
 </html>
