--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -53,8 +53,6 @@
           }
 
           return randomPokemon;
-
-          console.log("fetchRandomPokemon:", randomPokemon);
         } catch {
           console.error("Feil ved innlastning av Random Pokemon!");
         }
@@ -108,18 +106,23 @@
 
       async function fetchPokemonImg() {
         try {
-          const pokemonId = fetchRandomPokemonData().id;
-          const pokemonImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonId}.png`;
+          const randomPokemonData = await fetchRandomPokemon();
+          const enemyId = randomPokemonData[0].id;
+          const myPokemonId = randomPokemonData[1].id;
+
+          const enemyImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${enemyId}.png`;
+
+          const myPokemonImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${myPokemonId}.png`;
 
           const enemyContainer = document.querySelector(
             ".enemy-container .img-container.enemy"
           );
-          enemyContainer.innerHTML = `<img src="${pokemonImgUrl}" alt="Fiendens bilde">`;
+          enemyContainer.innerHTML = `<img src="${enemyImgUrl}" alt="Fiendens bilde">`;
 
           const myPokemonContainer = document.querySelector(
             ".my-pokemon-container .img-container"
           );
-          myPokemonContainer.innerHTML = `<img src="${pokemonImgUrl}" alt="Din Pokemons bilde">`;
+          myPokemonContainer.innerHTML = `<img src="${myPokemonImgUrl}" alt="Din Pokemons bilde">`;
         } catch (error) {
           console.error("Feil ved lasting av bilde", error);
         }
@@ -127,13 +130,7 @@
 
       async function showPokemonImages() {
         try {
-          const imgCard = document.createElement("img");
-          imgCard.src = fetchPokemonImg();
-          pokemonCard.appendChild(imgCard);
-
-          const randomPokemonFromFetch = await fetchRandomPokemon();
-          console.log("inne i showPokemonImages");
-          fetchPokemonImg(randomPokemonFromFetch);
+          await fetchPokemonImg();
         } catch (error) {
           console.error("Kunne ikke laste inn bilder", error);
         }
