--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -29,7 +29,14 @@
         </div>
       </div>
       <!--Container med min pokemons attacks -->
-      <div class="my-attacks-container"></div>
+      <div class="my-attack-container">
+        <ul id="skills-list">
+          <li class="skill-1">Skill 1</li>
+          <li class="skill-2">Skill 2</li>
+          <li class="skill-3">Skill 3</li>
+          <li class="skill-4">Skill 4</li>
+        </ul>
+      </div>
 
       <!-- Bildenontainere fienden -->
       <div class="enemy-container">
@@ -81,7 +88,6 @@
           const randomPokemon = await fetchRandomPokemon();
 
           const enemyData = await fetchRandomPokemonData(randomPokemon[0].id);
-
           const myPokemonData = await fetchRandomPokemonData(
             randomPokemon[1].id
           );
@@ -99,7 +105,6 @@
           document.querySelector(
             "#enemy-health-txt"
           ).innerHTML = `HP: ${enemyHP}`;
-
           document.querySelector("#my-pokemon-name").innerHTML =
             randomPokemon[1].name;
           document.querySelector(
